# NPSlicer

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
mesh/: bunny.stl  simple_overhang.stl  view.py
py/: boolean.py  server.py
src/: blender.rs  data.rs  experiment.rs  main.rs  medial_axis.rs  mod.rs  plot.rs  server.rs  settings.rs  shark.rs  stl_op.rs  straight_skeleton.rs  test.rs  tests.rs  utils.rs
src/boolean/: mod.rs  tagged_bool.rs  test.rs
src/contours/: boolean.rs  mod.rs  test.rs
src/gcode/: gcodefile.rs  mod.rs  path.rs  projection.rs  test.rs
src/geo/: aabb.rs  contour.rs  contour3d.rs  layer.rs  mod.rs  polygon.rs  polygon3d.rs
src/geometry/: aabb.rs  contour.rs  mod.rs  polygon.rs  polygon3d.rs
src/skeleton/: bound_event.rs  edge_event.rs  error.rs  mod.rs  nodes.rs  split_event.rs  test.rs  vertex_tree.rs
