[package]
name = "layer-gen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra-glm = "0.18.0"
stl_io = "0.8.2"
# 
nalgebra = "0.32"
ordered-float = "3.7"
priority-queue = "1.3"
thiserror = "1.0"
log = { version="0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.11.6"
i_overlay = "2.0.3"
serde_json = "1.0.140"
serde = "1.0.219"

